reworked, cleaned up data handling and converting data cases

--- a/jsonwork/outTurf4.html
+++ b/jsonwork/outTurf4.html
@@ -119,22 +119,26 @@
 <tr><td>OH0021108216</td><td>Lawnta Pinkston (26) 40 W Arch St</td><td>40 W ARCH ST Mansfield OH</td><td>41.002</td></tr>
 <tr><td>OH0021813556</td><td>Roger Migliaccio (49) 40 W Arch St</td><td>40 W ARCH ST Mansfield OH</td><td>41.003</td></tr>
 <tr><td></td><td></td><td></td><td>42</td></tr>
-<tr><td>OH0012695381</td><td>Brittany Browning (34) 41 W Arch St</td><td>41 W ARCH ST Mansfield OH</td><td>42.001</td></tr>
+<tr><td>OH0012693095</td><td>Sarah Sigler (42) 40 W Arch St</td><td>40 W Arch St Manfield OH</td><td>42.001</td></tr>
 <tr><td></td><td></td><td></td><td>43</td></tr>
-<tr><td>OH0020146122</td><td>Wahnita Rife (27) 39 W Arch St</td><td>39 W ARCH ST Mansfield OH</td><td>43.001</td></tr>
+<tr><td>OH0012695381</td><td>Brittany Browning (34) 41 W Arch St</td><td>41 W ARCH ST Mansfield OH</td><td>43.001</td></tr>
 <tr><td></td><td></td><td></td><td>44</td></tr>
-<tr><td>OH0012664736</td><td>Melissa Thomas (41) 37 W Arch St</td><td>37 W ARCH ST Mansfield OH</td><td>44.001</td></tr>
+<tr><td>OH0020146122</td><td>Wahnita Rife (27) 39 W Arch St</td><td>39 W ARCH ST Mansfield OH</td><td>44.001</td></tr>
 <tr><td></td><td></td><td></td><td>45</td></tr>
-<tr><td>OH0012665667</td><td>Temika Windham (38) 35 W Arch St</td><td>35 W ARCH ST Mansfield OH</td><td>45.001</td></tr>
-<tr><td>OH0022691144</td><td>Ja Keel Windham (21) 35 W Arch St</td><td>35 W ARCH ST Mansfield OH</td><td>45.002</td></tr>
+<tr><td>OH0020823108</td><td>Alaina Thompson (30) 39 W Arch St</td><td>39 W Arch St Manfield OH</td><td>45.001</td></tr>
 <tr><td></td><td></td><td></td><td>46</td></tr>
-<tr><td>OH0012668802</td><td>Juan Brownfield (40) 15 W Arch St</td><td>15 W ARCH ST Mansfield OH</td><td>46.001</td></tr>
+<tr><td>OH0012664736</td><td>Melissa Thomas (41) 37 W Arch St</td><td>37 W ARCH ST Mansfield OH</td><td>46.001</td></tr>
 <tr><td></td><td></td><td></td><td>47</td></tr>
-<tr><td>OH0012664600</td><td>Wilonda Carter (50) 152 S Main St</td><td>152 S MAIN ST Mansfield OH</td><td>47.001</td></tr>
-<tr><td>OH0021361929</td><td>Briatta Webb (25) 152 S Main St</td><td>152 S MAIN ST Mansfield OH</td><td>47.002</td></tr>
-<tr><td>OH0023486458</td><td>Molea Thompson (22) 152 S Main St</td><td>152 S MAIN ST Mansfield OH</td><td>47.003</td></tr>
+<tr><td>OH0012665667</td><td>Temika Windham (38) 35 W Arch St</td><td>35 W ARCH ST Mansfield OH</td><td>47.001</td></tr>
+<tr><td>OH0022691144</td><td>Ja Keel Windham (21) 35 W Arch St</td><td>35 W ARCH ST Mansfield OH</td><td>47.002</td></tr>
 <tr><td></td><td></td><td></td><td>48</td></tr>
-<tr><td>OH0021759062</td><td>Amber Henke (39) 154 S Main St</td><td>154 S MAIN ST Mansfield OH</td><td>48.001</td></tr>
+<tr><td>OH0012668802</td><td>Juan Brownfield (40) 15 W Arch St</td><td>15 W ARCH ST Mansfield OH</td><td>48.001</td></tr>
 <tr><td></td><td></td><td></td><td>49</td></tr>
-<tr><td>OH0012655991</td><td>Richard Gerber (67) 162 S Main St</td><td>162 S MAIN ST Mansfield OH</td><td>49.001</td></tr>
+<tr><td>OH0012664600</td><td>Wilonda Carter (50) 152 S Main St</td><td>152 S MAIN ST Mansfield OH</td><td>49.001</td></tr>
+<tr><td>OH0021361929</td><td>Briatta Webb (25) 152 S Main St</td><td>152 S MAIN ST Mansfield OH</td><td>49.002</td></tr>
+<tr><td>OH0023486458</td><td>Molea Thompson (22) 152 S Main St</td><td>152 S MAIN ST Mansfield OH</td><td>49.003</td></tr>
+<tr><td></td><td></td><td></td><td>50</td></tr>
+<tr><td>OH0021759062</td><td>Amber Henke (39) 154 S Main St</td><td>154 S MAIN ST Mansfield OH</td><td>50.001</td></tr>
+<tr><td></td><td></td><td></td><td>51</td></tr>
+<tr><td>OH0012655991</td><td>Richard Gerber (67) 162 S Main St</td><td>162 S MAIN ST Mansfield OH</td><td>51.001</td></tr>
 </table></body></html>
